# PySocialForce

./: pyproject.toml
examples/: example.py
