[tool.poetry]
name = "pysocialforce"
version = "0.1.0"
description = ""
authors = ["Max Spahn <m.spahn@tudelft.nl>"]

[tool.poetry.dependencies]
python = ">=3.6.5,<3.10"
numpy = ">=1.19"
toml = ">=0.10"
numba = ">=0.51"
scipy = ">=1.5"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
jupyter = "^1.0.0"
pylint = "^2.13.8"
pytest = "^6.2.5"
matplotlib = {version = "^3.2.1", optional = true}

[tool.poetry.extras]
plot = ["matplotlib"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
